# 3md

./: .atlasignore  .attest.json  .gitattributes  .gitignore  .swift-format  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Package.swift  README.md  ROADMAP.md  SECURITY.md  SPEC.md  docs.3md  fledge.toml
.github/: pull_request_template.md
.specsync/: adoption-report.json  config.toml  registry.toml  sdd.json
Examples/: 3md-in-3md.3md  478-breath-cycle.3md  README.md  accessibility.3md  aegis-sensor-sweep.3md  animation.3md  api-overview.3md  apollo-11-powered-descent-1969.3md  apt-kill-chain-timeline.3md  art-album.3md  art-comic-strip.3md  art-design-system.3md  art-loading-spinner.3md  art-poem-stanzas.3md  art-sheet-music.3md  art-storyboard.3md  art-voxel-heart.3md  asl-fingerspell-deck.3md  aurora-borealis-flipbook.3md  baby-milestones.3md  balcony-garden-seasons.3md  bass-drop-pulse.3md  bespoke-jacket-pattern.3md  bit-autopsy.3md  biz-invoice.3md  biz-okrs.3md  biz-org-chart.3md  biz-pnl.3md  biz-roadmap.3md  biz-sales-funnel.3md  biz-stock-watch.3md  blackpoll-warbler-atlantic-sprint.3md  blue-hole-descent-log.3md  box-breathing-orb.3md  brown-butter-scallops-timed-cook.3md  bug-lifecycle.3md  burgundy-flight-pinot-noir.3md  burgundy-vertical-pinot.3md  burn-the-bridge.3md  card-trick.3md  (+218 more)
conformance/: README.md  invalid-duplicate-plane.json  invalid-duplicate-z-decimal-forms.json  invalid-frontmatter-no-colon.json  invalid-frontmatter-unclosed.json  invalid-missing-frontmatter.json  invalid-z-hex.json  (+37 more)
rust/: Cargo.toml
rust/tests/: conformance.rs
(+169 files in other folders)
