[package]
name = "threemd"
version = "0.1.0"
edition = "2021"
description = "A faithful Rust implementation of the 3md format: Markdown extended along a single free Z axis."
license = "MIT"
repository = "https://github.com/CorvidLabs/3md"

[dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
